Allow up to 4 seconds to find webcam and GSPRO windows add exputt settings in settings.json When club path and face angle aren't available, don't send anything instead of sending zeros

--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
   "HOST": "127.0.0.1", // OpenAPI IP (Leave as is)
   "PORT": 921, // OpenAPI Port (Leave as is)
 
-  "WINDOW_NAME": "AirPlay", // Enter either AirPlay (iOS) or EasyCast (Android)
+  "WINDOW_NAME": "AirPlay", // Enter either AirPlay (iOS) or EasyCast (Android), or device name (Android via scrcpy/USB)
   "TARGET_WIDTH": 1638, // Enter "1597" for iPad or "1638" for iPhone/Android
   "TARGET_HEIGHT": 752, // Enter "1198" for iPad or "752" for iPhone/Android
 
@@ -10,24 +10,35 @@
   // The first two numbers are the X,Y coordinates of the upper left corner of the metric.
   // 0,0 would be the upper left corner of the screen mirrored window
   // The next two numbers are the Width and Height of the metric
-  "ROI1" : " 136 , 367 , 87 , 56 ",  // Ball Speed
-  "ROI2" : " 640 , 272 , 110 , 53 ", // Spin Rate
-  "ROI3" : " 642 , 371 , 93 , 52 ",  // Spin Axis
-  "ROI4" : " 466 , 272 , 105 , 55 ", // Launch Direction (VLA)
-  "ROI5" : " 126 , 464 , 107 , 56 ", // Launch Angle (HLA)
-  "ROI6" : " 304 , 371 , 87 , 54 ",  // Club Speed
+  // "ROI1" : " 136 , 367 , 87 , 56 ",  // Ball Speed
+  // "ROI2" : " 640 , 272 , 110 , 53 ", // Spin Rate
+  // "ROI3" : " 642 , 371 , 93 , 52 ",  // Spin Axis
+  // "ROI4" : " 466 , 272 , 105 , 55 ", // Launch Direction (VLA)
+  // "ROI5" : " 126 , 464 , 107 , 56 ", // Launch Angle (HLA)
+  // "ROI6" : " 304 , 371 , 87 , 54 ",  // Club Speed
  
  // Putting modes
   // 0: disable putting completely
   // 1: (default) webcam putting, using https://github.com/alleexx/cam-putting-py/releases
-  // 2: ExPutt or other HDMI putting capture.  Uses ROIs EX_ROI1 to EX_ROI5
+  // 2: ExPutt or other HDMI putting capture.  Uses ROIs EX_ROI1 through EX_ROI4
   "PUTTING_MODE" : 1,
-  "BALL_TRACKING_OPTIONS" : "-c orange2",
-  
+
   // Putting options
   // 0: (default) no options
-  // 1: don't change window focus when putting
-  //  "PUTTING_OPTIONS" : 0,
-  
+  // 1: don't change window focus when putting in webcam mode (PUTTING_MODE=1)
+  //  "PUTTING_OPTIONS" : 0, // remove slashes at the start to enable this line
+
+// Options for PUTTING_MODE 1
+  "BALL_TRACKING_OPTIONS" : "-c orange2",   // Only applies to PUTTING_MODE 1, webcam
+ 
+// Options for PUTTING_MODE 2
+ "EX_WINDOW_NAME": "Camera", // Use windows Camera application to display input from HDMI/USB dongle
+ "EX_TARGET_WIDTH": 1920, // Width
+ "EX_TARGET_HEIGHT": 1048, // Height
+ //"EX_ROI1" : " 1600 , 134 , 121 , 58 ", // Ball Speed
+ //"EX_ROI2" : " 1587 , 274 , 147 , 52 ", // Launch Direction
+ //"EX_ROI3" : " 1586 , 556 , 151 , 56 ", // Path
+ //"EX_ROI4" : " 1589 , 700 , 141 , 54 ", // Impact Angle
+   
   "METRIC": "Yards" // (Leave as is) - If you want metric instead of imperial, change it in GSPro itself
 }
